# gadgetosd

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Container.cpp  Container.h  CustomOptionDescription.cpp  CustomOptionDescription.hpp  Device.cpp  Device.h  DockerContainer.cpp  DockerContainer.h  EXTERNAL.md  Gadget.cpp  Gadget.h  Helpers.cpp  Helpers.h  Makefile  Project.cpp  Project.h  ProjectFactory.cpp  ProjectFactory.h  README  README.md  Settings.cpp  Settings.h  Volume.cpp  Volume.h  build.sh  build_cmake.sh  config.c  config.h  data.txt  docker.c  docker.h  gadget.c  gadget_build.c  gadget_delete.c  gadget_deploy.c  gadget_init.c  gadget_log.c  (+34 more)
dockerfiles/ubuntu/: Dockerfile
mac/: mac_run.sh.in  packaging.cmake  setup.sh
patch/: unweak_mbuf.patch
templates/alpine/: Dockerfile
templates/blink-leds/: Dockerfile
tests/: config.yaml  test_gadget.py
ubuntu/: Dockerfile  changelog  desktopfile.in  packaging.cmake  setup.sh
windows-msys/: build.sh  setup.sh
windows-msys/gadget-shell/: build.sh  keyboard_set.sh
windows-msys/gadget-shell/sdk-installer/: docker_start  gadget_init_900_welcome.sh  gadget_init_docker.sh  release.sh  setup-git-sdk.bat
