CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
 
PROJECT("Gadget")

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

FILE(STRINGS ${CMAKE_SOURCE_DIR}/version.h PROJECT_VERSION_MAJOR REGEX ".*_MAJOR.*")
STRING(REGEX REPLACE ".* ([0-9]+)" "\\1" PROJECT_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")

FILE(STRINGS ${CMAKE_SOURCE_DIR}/version.h PROJECT_VERSION_MINOR REGEX ".*_MINOR.*")
STRING(REGEX REPLACE ".* ([0-9]+)" "\\1" PROJECT_VERSION_MINOR "${PROJECT_VERSION_MINOR}")

FILE(STRINGS ${CMAKE_SOURCE_DIR}/version.h PROJECT_VERSION_PATCH REGEX ".*_PATCH.*")
STRING(REGEX REPLACE ".* ([0-9]+)" "\\1" PROJECT_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

SET( PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}" )

MESSAGE( "CMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME}" )
MESSAGE( "CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}" )
MESSAGE( "CMAKE_ROOT=${CMAKE_ROOT}" )
MESSAGE( "CMAKE_SYSTEM=${CMAKE_SYSTEM}" )

IF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
  SET( LIBUUID_LIBRARIES "" )
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
  FIND_PACKAGE(LibUUID REQUIRED)
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "MSYS")
  FIND_PACKAGE(LibUUID REQUIRED)
ENDIF()

# Required for Mongoose to support file upload
ADD_DEFINITIONS( -DMG_ENABLE_HTTP_STREAMING_MULTIPART )
ADD_DEFINITIONS( -std=c11 )
ADD_DEFINITIONS( -D_GNU_SOURCE )

SET( GOSD_SRCS 
mongoose.c
ini.c
utils.c
config.c
mongoose_utils.c 
gadgetosd.c
gadgetosd_api_version.c 
gadgetosd_api_application_add.c
gadgetosd_api_application_create.c
gadgetosd_api_application_start.c
gadgetosd_api_application_stop.c
gadgetosd_api_application_delete.c
gadgetosd_api_application_purge.c
gadgetosd_api_application_status.c
gadgetosd_api_application_log.c
)
SET( GOSD_EXECUTABLE gadgetosd )
ADD_EXECUTABLE("${GOSD_EXECUTABLE}" ${GOSD_SRCS} )
TARGET_LINK_LIBRARIES("${GOSD_EXECUTABLE}" ${LIBUUID_LIBRARIES})
INSTALL(TARGETS ${GOSD_EXECUTABLE} DESTINATION bin)

SET( GADGET_SRCS 
mongoose.c
ini.c
utils.c 
config.c 
mongoose_utils.c 
gadget_project.c
gadget.c
gadget_init.c
gadget_build.c
gadget_stop.c
gadget_start.c
gadget_delete.c
gadget_purge.c
gadget_deploy.c
gadget_status.c
gadget_shell.c
gadget_log.c
docker.c
)
SET( GADGET_EXECUTABLE gadget )
ADD_EXECUTABLE("${GADGET_EXECUTABLE}" ${GADGET_SRCS} )
TARGET_LINK_LIBRARIES("${GADGET_EXECUTABLE}" ${LIBUUID_LIBRARIES})
INSTALL(TARGETS ${GADGET_EXECUTABLE} DESTINATION bin)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/gadget_shell.sh
DESTINATION bin
PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

SET (SVG_ICON_FILE "${CMAKE_SOURCE_DIR}/icon.svg")

## install assets
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/templates DESTINATION share/gadget/
USE_SOURCE_PERMISSIONS
)

FILE(DOWNLOAD http://opensource.nextthing.co/githost/chiptainer_alpine/stable/latest ${CMAKE_BINARY_DIR}/chiptainer_alpine_stable_latest SHOW_PROGRESS)
FILE(READ ${CMAKE_BINARY_DIR}/chiptainer_alpine_stable_latest CHIPTAINER_ALPINE_LATEST)
STRING(REGEX REPLACE "\n$" "" CHIPTAINER_ALPINE_LATEST "${CHIPTAINER_ALPINE_LATEST}")

SET(CHIPTAINER_ALPINE_URL http://opensource.nextthing.co/githost/chiptainer_alpine/stable/${CHIPTAINER_ALPINE_LATEST}/chiptainer_alpine_rootfs.tar.gz)
MESSAGE( STATUS "downloading ${CHIPTAINER_ALPINE_URL}" )
FILE(DOWNLOAD ${CHIPTAINER_ALPINE_URL} ${CMAKE_BINARY_DIR}/rootfs.tar.gz SHOW_PROGRESS)
INSTALL(FILES ${CMAKE_BINARY_DIR}/rootfs.tar.gz
DESTINATION share/gadget/templates/alpine/
PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  SET( CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}" )
  MESSAGE(STATUS "Running Mac packaging")
  INCLUDE("mac/packaging.cmake")
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  STRING( TOLOWER "${PROJECT_NAME}" CPACK_PACKAGE_FILE_NAME  )
  MESSAGE(STATUS "Running Linux packaging")
  INCLUDE("ubuntu/packaging.cmake")
ENDIF()

INCLUDE( CPack )

MESSAGE( "PROJECT_VERSION=${PROJECT_VERSION}" )
